kubernetes/azure/frontend-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: frontend
  strategy: {}
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
      - image: farmersregistry.azurecr.io/farmers-frontend:0.12.0
        name: frontend
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          successThreshold: 1
          failureThreshold: 6
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          successThreshold: 1
          failureThreshold: 1
          periodSeconds: 10
        resources:
          requests:
            cpu: 200m
            memory: 80Mi
          limits:
            cpu: 800m
            memory: 80Mi
      dnsPolicy: ClusterFirst
status: {}
