kubernetes/azure/image-server-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: image-server
  name: image-server
spec:
  replicas: 1
  selector:
    matchLabels:
      run: image-server
  strategy: {}
  template:
    metadata:
      labels:
        run: image-server
    spec:
      containers:
      - image: farmersregistry.azurecr.io/farmers-image-server:0.5.0
        name: image-server
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 1
          successThreshold: 1
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 400m
            memory: 50Mi
        volumeMounts:
          - mountPath: /images
            name: images
      volumes:
      - name: images
        persistentVolumeClaim:
          claimName: farmers-images
      dnsPolicy: ClusterFirst
status: {}
