kubernetes/azure/mailer-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: mailer
  name: mailer
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mailer
  strategy: {}
  template:
    metadata:
      labels:
        run: mailer
    spec:
      containers:
      - image: farmersregistry.azurecr.io/farmers-mailer:0.1.0
        name: mailer
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 400m
            memory: 200Mi
      dnsPolicy: ClusterFirst
status: {}
