kubernetes/azure/server-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      run: server
  strategy: {}
  template:
    metadata:
      labels:
        run: server
    spec:
      containers:
      - image: farmersregistry.azurecr.io/farmers-server:0.11.0
        name: server
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 1
          successThreshold: 1
        resources:
          requests:
            cpu: 100m
            memory: 80Mi
          limits:
            cpu: 400m
            memory: 80Mi
      dnsPolicy: ClusterFirst
status: {}
