kubernetes/azure/image-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: image-server
  name: image-server
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    run: image-server
  type: NodePort
