kubernetes/azure/monogodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
  - port: 27017
    name: mongodb
  clusterIP: None
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: "mongodb"
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.2-bionic
          lifecycle:
            postStart:
              exec:
                command: [ '/bin/bash', '-c', '[[ -f /opt/collections/script.sh ]] && /opt/collections/script.sh || echo "no collection script - nothing to do"']
          ports:
            - containerPort: 27017
              name: mongo
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: data
              mountPath: /data/db
          volumeMounts:
            - name: collections
              mountPath: /opt/collections
      volumes:
        - name: collections
          configMap:
            name: mongo-collections
            defaultMode: 0555
            optional: true
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: default
        resources:
          requests:
            storage: 2Gi
