kubernetes/azure/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
  - host: farmers.azure
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
