kubernetes/azure/image-server-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: image-server
spec:
  rules:
  - host: farmers.azure
    http:
      paths:
      - path: /images
        backend:
          serviceName: image-server
          servicePort: 80
  - host: farmers.klino.me
    http:
      paths:
      - path: /images
        backend:
          serviceName: image-server
          servicePort: 80
