kubernetes/azure/server-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server
spec:
  rules:
  - host: farmers.azure
    http:
      paths:
      - path: /api
        backend:
          serviceName: server
          servicePort: 80
      - path: /images
        backend:
          serviceName: server
          servicePort: 80
  - host: farmers.klino.me
    http:
      paths:
      - path: /api
        backend:
          serviceName: server
          servicePort: 80
      - path: /images
        backend:
          serviceName: server
          servicePort: 80
